Release Notes

* 9/27/2017
  * added resurrectConsumers

* 9/26/2017
  * removed splitrule check in reactivatePending

* 9/15/2017
  * added task.diskIO

* 9/14/2017
  * fixed flip-flop of AES flag in refiner

* 9/11/2017
  * disabled IO check for event service in AtlasPJB

* 9/6/2017
  * added disableAutoFinish
  * deleting event service datasets
  * fixed respectSplutRule to set nFilesTobeUsed properly

* 8/28/2017
  * fixed AtlasAJB/PJB for 3 digtis caches

* 8/23/2017
  * using (type=SCRATCHDISK)\notforextracopy=1 for secondary copy of user output

* 8/18/2017
  * added registerEsFiles

* 8/14/2017
  * added skipShortInput

* 8/11/2017
  * added AES_MAXPENDIG
  * added SCOUT_CPUTIME_RANK, SCOUT_RAMCOUNT_RANK, SCOUT_RAMCOUNT_MARGIN

* 8/10/2017
  * fixed retryTask not to change running files

* 8/9/2017
  * fixed AF when tasks are re-refined

* 7/11/2017
  * disabled second copy when --destSE

* 7/10/2017
  * fixed cloneJobs to set correct ramCount for each PQ

* 7/5/2017
  * getting nTasks and nFiles from config

* 7/3/2017
  * considering maxNumFiles in getAtom
  * added AES_NESCONSUMERS and AES_NESCONSUMERS
  * changed AtlasPJB to skip opportunistic sites for high prio jobs
  * enabled automatic AES task conversion

* 6/27/2017
  * added getNumUnprocessedEvents_JEDI

* 6/26/2017
  * skip scouts for ES
  * ES without ueRealNumEvt or nEventsPerFile
  * WQ-GS alignment

* 5/17/2017
  * changed nRunningCap to ignore highPrioWaiting in AtlasPJT

* 5/12/2017
  * setting nEsConsumers=1 etc for esFraction

* 5/8/2017
  * added nSimEvents

* 5/4/2017
  * fixed AtlasAJB for AtnalysisBase
  * fixed getAvailableFiles

* 5/3/2017
  * added JediDBProxyFiltered
  * added inFilePosEvtNum

* 5/2/2017
  * changed AtlasPJB for unified PQs

* 4/28/2017
  * fixed brokerage for git rel

* 4/25/2017
  * fake co-jumbo

* 4/24/2017
  * resource_type tagging

* 4/14/2017
  * added noExecStrCnv

* 4/11/2017
  * added throttleJobsInPausedTasks

* 4/5/2017
  * added pseudo output dataset