@@ -1,5 +1,8 @@
 Release Notes
 
+* 10/09/2017
+  * added usePrefetcher
+
 * 9/27/2017
   * added resurrectConsumers
 
